# butterscotch

./: Cargo.toml  README.md
crates/butterscotch/: Cargo.toml  lib.rs
crates/butterscotch/src/: lib.rs
crates/codegen/: Cargo.toml  lib.rs  tuple_impl.rs
crates/codegen/tuple_impl/: gen_impl.rs  mod.rs
crates/common/: Cargo.toml  lib.rs
crates/common/container/: mod.rs  move_ref.rs
crates/common/container/slot_map/: gid.rs  gid_lookup.rs  gid_mask.rs  gid_multi_store.rs  gid_multi_store_tuple.rs  gid_registry.rs  gid_store.rs  mod.rs  slot_map.rs
crates/common/src/: dpi.rs  lib.rs  util.rs
crates/common/src/chrono/: accumulator.rs  mod.rs  timer.rs  timer_smooth.rs
crates/common/src/container/: double_buffer.rs  mod.rs
crates/common/src/container/object_pool/: mod.rs  object_pool.rs  pool_reference_count.rs  ref_pool_heap.rs  weak.rs
crates/common/src/container/slot_map/: gid.rs  gid_registry.rs  gid_store.rs  mod.rs  slot_map.rs
crates/common/src/ecs/: ecs.rs  system.rs
crates/common/src/event/: event.rs  event_simple.rs  event_system.rs  mod.rs
crates/common/src/future/: incremental_local_executor.rs  mod.rs
crates/common/src/interop/: events.rs  mod.rs  window.rs
crates/common/src/math/: mat2.rs  mat3.rs  mat_common.rs  mod.rs  vec2.rs  vec3.rs  vec_common.rs
crates/common/src/math/fixed/: def.rs  mod.rs  ops.rs  util.rs
crates/common/src/util/: any.rs  intrinsics.rs  mod.rs  tiny_string.rs  union_ref.rs
crates/common/tuple/: element_getter.rs  element_wrapper.rs  mod.rs  optional.rs  tuple_ref.rs  unoptional.rs
crates/common/utility/: generic_retype.rs  intrinsics.rs  mod.rs  move_ref.rs  tiny_string.rs  unsafe_any.rs
crates/core/: Cargo.toml  lib.rs
crates/core/src/: init.rs  lib.rs  util.rs
crates/core/src/chrono/: accumulator.rs  timer.rs  timer_smooth.rs
crates/core/src/container/: trait_map.rs
crates/core/src/container/slot_map/: gid.rs  mod.rs  slot_map.rs
crates/core/src/engine/: engine.rs  mod.rs
crates/core/src/event/: event_consumer.rs  event_publisher.rs  event_queue.rs  mod.rs
crates/core/src/math/: mod.rs
crates/core/src/math/fixed/: consts.rs  def.rs  general.rs  mod.rs  ops.rs  polyfill.rs  test.rs  util.rs
crates/ecs/: Cargo.toml  archetype.rs  build.rs  component.rs  component_store.rs  component_tuple.rs  component_tuple_gen.rs  ecs.rs  ecs_builder.rs  lib.rs  query.rs  test.rs
crates/ecs/src/: lib.rs  system.rs
crates/ecs_derive/: Cargo.toml  lib.rs
crates/events/: Cargo.toml
crates/events/src/: consumer.rs  event_system.rs  lib.rs  loan_vec.rs  publisher.rs  queue.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/test/: Cargo.toml  main.rs
crates/window/: Cargo.toml
crates/window/src/: event.rs  lib.rs  window_controller.rs
crates/winit/: Cargo.toml
crates/winit/src/: lib.rs  monitor.rs
crates_standalone/chunky_vec/: Cargo.toml  chunk.rs  chunky_vec.rs  lib.rs  readme.md  test.rs
design/: ECS.md
docs/: notes.md
examples/develop/: Cargo.toml  build.rs
examples/develop/assets/subfolder/: shader.vert.glsl
examples/develop/html/: index.html
examples/develop/src/: engine.rs  entry.rs  lib.rs  main.rs
examples/develop/src/engine/: engine.rs  entry.rs  mod.rs
tools/const_gen/: .gitignore  Cargo.toml
tools/const_gen/src/: main.rs
