[package]
name = "butterscotch-common"
version = "0.0.1"
authors = ["Michael Baker <butterscotch@notvery.moe>"]
edition = "2018"
license = "Apache-2.0"

[lib]
path="./lib.rs"

[dependencies]
static_assertions = "1.1.0"
bitvec = "0.20.1"
arrayvec = { version = "0.5.2", feature = ["unstable-const-fn"] }
butterscotch-chunky-vec = { path="../../crates_standalone/chunky_vec" }