[package]
name = "butterscotch-winit"
version = "0.1.0"
authors = ["Michael Baker <butterscotch@notvery.moe>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.23.0", features = ["x11"], default-features = false }
butterscotch-common = { path = "../common" }