[package]
name = "butterscotch-winit"
version = "0.1.0"
authors = ["Michael Baker <butterscotch@notvery.moe>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = [
    "winit/x11"
]
web = [
    "web-sys",
    "butterscotch-common/web",
    "winit/web-sys"
]

[dependencies]
cfg-if = "1.0"
winit = { version = "0.23", default-features = false }
butterscotch-common = { path = "../common" }
web-sys = { version = "=0.3.39", optional = true }
raw-window-handle = "0.3"