[package]
name = "develop"
version = "0.1.0"
authors = ["Michael Baker <butterscotch@notvery.moe>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0"
wgpu = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
butterscotch = { path = "../../crates/core", features = ["web"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
butterscotch = { path = "../../crates/core" }
web-sys = { version = "0.3", features = ["Document", "Element"]}
wasm-bindgen = "0.2"